# deploy-railway

./: .dockerignore  .env.example  Dockerfile  Procfile  README.md  database_seed.py  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
api/: admin.py
api/adapters/inbound/http/: api.py
api/adapters/inbound/http/controllers/: authController.py  logController.py  robotController.py  runController.py  taskController.py
api/adapters/inbound/http/dtos/: Auth.py  Log.py  Robot.py  Run.py  Task.py
api/adapters/inbound/http/routes/: auth.py  log.py  robot.py  run.py  task.py
api/adapters/inbound/http/utils/: Auth.py  Task.py
api/adapters/outbound/celery/: utils.py
api/application/ports/: logPort.py  robotPort.py  runPort.py  taskPort.py  tokenPort.py  userPort.py
api/application/usecases/: logUseCase.py  robotUseCase.py  runUseCase.py  taskUseCase.py  tokenUseCase.py  userUseCase.py
api/domain/entities/: group.py  log.py  robot.py  run.py  user.py
api/domain/repositories/: IGroupRepository.py  ILogRepository.py  IRobotRepository.py  IRunRepository.py  IUserRepository.py
api/migrations/: 0001_initial.py  0002_log.py  0003_usuario.py
api/tests/: testApi.py
api/tests/unit/: test_authentication.py  test_group_repository.py  test_log_repository.py  test_protected_route.py  test_request_validation.py  test_robot_repository.py  test_run_repository.py  test_token_usecase.py  test_user_repository.py
api/tests/unit/mocks/: mockController.py  robotRepository.py  userRepository.py
server/: celery.py  settings.py  test_settings.py  urls.py
(+14 files in other folders)
